--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,8 @@ pydantic>=2.0.0
 # -----------------------------------------------------------------------------
 # Web Search & Scraping
 # -----------------------------------------------------------------------------
-duckduckgo-search>=6.0.0
+#duckduckgo-search>=6.0.0
+ddgs
 beautifulsoup4>=4.12.0
 lxml>=5.0.0
 requests>=2.31.0
