esempoi di casi d'uso

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # =============================================================================
 # Multi-Agent Research Assistant - Dependencies
 # =============================================================================
-# Python 3.11+ richiesto
+# Python 3.11+ is required.
 # =============================================================================
 
 # -----------------------------------------------------------------------------
